crates/iql-parser/src/snapshots/issuecraft_ql__tests__case_insensitive_keywords-4.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    User {
        username: "alice",
        email: None,
        name: None,
    },
)
