crates/iql-parser/src/snapshots/issuecraft_ql__tests__close_with_and_without_reason-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "backend#123",
        ),
        reason: Some(
            Done,
        ),
    },
)
