crates/iql-parser/src/snapshots/issuecraft_ql__tests__comment_statement.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Comment(
    CommentStatement {
        issue_id: IssueId(
            "backend#123",
        ),
        content: "Quick comment",
    },
)
