crates/iql-parser/src/snapshots/issuecraft_ql__tests__comparison_operators-4.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "count",
                op: LessThanOrEqual,
                value: UnsignedInteger(
                    5,
                ),
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
